apps/production/retailapp/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kart
  namespace: retailapp
  labels:
    app: eksack
    service: kart
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: kart
  template:
    metadata:
      labels:
        app: eksack
        service: kart
    spec:
      restartPolicy: Always
      containers:
      - name: kart
        image: <account_id>.dkr.ecr.<region>.amazonaws.com/eksack/kart:1.0
        imagePullPolicy: Always
        ports:
         - containerPort: 8445
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: retailapp
  labels:
    app: eksack
    service: product
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: product
  template:
    metadata:
      labels:
        app: eksack
        service: product
    spec:
      restartPolicy: Always
      containers:
      - name: product
        image: <account_id>.dkr.ecr.<region>.amazonaws.com/eksack/product:1.0
        imagePullPolicy: Always
        ports:
         - containerPort: 8444
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: retailapp
  labels:
    app: eksack
    service: user
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: user
  template:
    metadata:
      labels:
        app: eksack
        service: user
    spec:
      restartPolicy: Always
      containers:
      - name: user
        image: <account_id>.dkr.ecr.<region>.amazonaws.com/eksack/user:1.0
        imagePullPolicy: Always
        ports:
         - containerPort: 8446
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: retailapp
  labels:
    app: eksack
    service: webapp
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: webapp
  template:
    metadata:
      labels:
        app: eksack
        service: webapp
    spec:
      restartPolicy: Always
      containers:
      - name: webapp
        image: <account_id>.dkr.ecr.<region>.amazonaws.com/eksack/webapp:1.0
        imagePullPolicy: Always
        ports:
         - containerPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: retailapp
  labels:
    app: eksack
    service: order
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: order
  template:
    metadata:
      labels:
        app: eksack
        service: order
    spec:
      restartPolicy: Always
      containers:
      - name: order
        image: <account_id>.dkr.ecr.<region>.amazonaws.com/eksack/order:1.0
        imagePullPolicy: Always
        ports:
         - containerPort: 8448
