apps/production/retailapp/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kart
  namespace: retailapp
  labels:
    app: eksack
    service: kart
spec:
  type: ClusterIP
  selector:
    app: eksack
    service: kart
  ports:
    - name: kart
      protocol: TCP
      port: 8445
      targetPort: 8445
---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: retailapp
  labels:
    app: eksack
    service: product
spec:
  type: ClusterIP
  selector:
    app: eksack
    service: product
  ports:
    - name: product
      protocol: TCP
      port: 8444
      targetPort: 8444
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: retailapp
  labels:
    app: eksack
    service: user
spec:
  type: ClusterIP
  selector:
    app: eksack
    service: user
  ports:
    - name: user
      protocol: TCP
      port: 8446
      targetPort: 8446
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: retailapp
  labels:
    app: eksack
    service: order
spec:
  type: ClusterIP
  selector:
    app: eksack
    service: order
  ports:
    - name: order
      protocol: TCP
      port: 8448
      targetPort: 8448
---
apiVersion: v1
kind: Service
metadata:
  name: webappnp
  namespace: retailapp
  labels:
    service: webappnp
spec:
  type: NodePort
  selector:
    app: eksack
    service: webapp
  ports:
    - port: 80
      targetPort: 8443
      protocol: TCP
